# baphomet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
example/: CMakeLists.txt  font_corrupt.cpp  gameoflife.cpp  indev.cpp  music_player.cpp  scratch.cpp  spinning_ovals.cpp  testing.cpp  testing.hpp
example/prototyping/: CMakeLists.txt  messages.cpp
example/resources/: star.aseprite  test_tex.aseprite
example/resources/ase/: 8squares.aseprite
example/resources/msdf_shaders/: opt1.frag  opt1.vert
example/resources/scores/: marchin_in.txt
include/: CMakeLists.txt
include/baphomet/: baphomet.hpp
include/baphomet/app/: application.hpp  runner.hpp  window.hpp
include/baphomet/app/internal/: messenger.hpp  messenger_config.hpp  msgcat.hpp  resource_loader.hpp
include/baphomet/gfx/: color.hpp  particle_system.hpp  render_target.hpp  spritesheet.hpp  texture.hpp
include/baphomet/gfx/font/: cp437.hpp
include/baphomet/gfx/gl/: buffer_base.hpp  context_enums.hpp  framebuffer.hpp  shader.hpp  static_buffer.hpp  texture_unit.hpp  vec_buffer.hpp  vertex_array.hpp
include/baphomet/gfx/gl/batching/: batch.hpp  line_batch.hpp  lined_batch.hpp  oval_batch.hpp  pixel_batch.hpp  rect_batch.hpp  texture_batch.hpp  tri_batch.hpp
include/baphomet/gfx/internal/: batch_set.hpp
include/baphomet/mgr/: audiomgr.hpp  gfxmgr.hpp  inputmgr.hpp  timermgr.hpp  tweenmgr.hpp
include/baphomet/noise/: opensimplex.hpp  perlin.hpp
include/baphomet/util/: averagers.hpp  dear.hpp  enum_bitmask_ops.hpp  framecounter.hpp  memusage.hpp  platform.hpp  random.hpp  shapes.hpp
include/baphomet/util/time/: ticker.hpp  time.hpp
include/gl/: buffer_base.hpp  context.hpp  context_enums.hpp  framebuffer.hpp  shader.hpp  static_buffer.hpp  texture_unit.hpp  vec_buffer.hpp  vertex_array.hpp
include/gl/batching/: batch.hpp  line_batch.hpp  oval_batch.hpp  pixel_batch.hpp  rect_batch.hpp  texture_batch.hpp  tri_batch.hpp
include/goat/: application.hpp  configs.hpp  dear.hpp  engine.hpp  goat.hpp  inputmgr.hpp  window.hpp
include/goat/util/: enum_bitops.hpp  platform.hpp  rnd.hpp  ticker.hpp  time.hpp
include/hades/: application.hpp  batch_set.hpp  color.hpp  context.hpp  eventmgr.hpp  gfxmgr.hpp  hades.hpp  inputmgr.hpp  resource_loader.hpp  runner.hpp  spritesheet.hpp  texture.hpp  window.hpp  windowmgr.hpp
include/hades/font/: cp437.hpp
include/hades/gl/: buffer_base.hpp  context.hpp  framebuffer.hpp  shader.hpp  static_buffer.hpp  vec_buffer.hpp  vertex_array.hpp
include/hades/internal/: batch_set.hpp  bitmask_enum.hpp  resource_loader.hpp  ts_deque.hpp  ts_queue.hpp
include/hades/util/: audiomgr.hpp  averagers.hpp  framecounter.hpp  memusage.hpp  platform.hpp  random.hpp  shapes.hpp  strfuncs.hpp  thread_pool.hpp  ticker.hpp  time.hpp  timermgr.hpp  tweenmgr.hpp
include/horns/: shader.hpp
proto/: CMakeLists.txt  draw_line.cpp
resources/font/ase/: 1px_6x8.aseprite
resources/logo/ase/: logo.aseprite
scripts/: build  build.py  non_submodule_listing.json  update_non_submodules.py
sources/gl/: buffer_base.cpp  context.cpp  framebuffer.cpp  shader.cpp  texture_unit.cpp  vertex_array.cpp
sources/gl/batching/: batch.cpp  line_batch.cpp  oval_batch.cpp  pixel_batch.cpp  rect_batch.cpp  texture_batch.cpp  tri_batch.cpp
sources/hades/: application.cpp  batch_set.cpp  color.cpp  context.cpp  eventmgr.cpp  gfxmgr.cpp  inputmgr.cpp  resource_loader.cpp  runner.cpp  spritesheet.cpp  texture.cpp  window.cpp  windowmgr.cpp
sources/hades/font/: cp437.cpp
sources/hades/gl/: buffer_base.cpp  context.cpp  framebuffer.cpp  shader.cpp  vertex_array.cpp
sources/hades/internal/: batch_set.cpp  resource_loader.cpp
sources/hades/util/: audiomgr.cpp  averagers.cpp  framecounter.cpp  memusage.cpp  random.cpp  shapes.cpp  strfuncs.cpp  thread_pool.cpp  ticker.cpp  timermgr.cpp  tweenmgr.cpp
src/: CMakeLists.txt
src/baphomet/: baphomet.cpp
src/baphomet/app/: application.cpp  runner.cpp  window.cpp
src/baphomet/app/internal/: messenger.cpp  messenger_config.cpp  msgcat.cpp  resource_loader.cpp
src/baphomet/gfx/: color.cpp  particle_system.cpp  render_target.cpp  spritesheet.cpp  texture.cpp
src/baphomet/gfx/font/: cp437.cpp
src/baphomet/gfx/gl/: buffer_base.cpp  framebuffer.cpp  shader.cpp  texture_unit.cpp  vertex_array.cpp
src/baphomet/gfx/gl/batching/: batch.cpp  line_batch.cpp  lined_batch.cpp  oval_batch.cpp  pixel_batch.cpp  rect_batch.cpp  texture_batch.cpp  tri_batch.cpp
src/baphomet/gfx/internal/: batch_set.cpp
src/baphomet/mgr/: audiomgr.cpp  gfxmgr.cpp  inputmgr.cpp  timermgr.cpp  tweenmgr.cpp
src/baphomet/noise/: opensimplex.cpp  perlin.cpp
src/baphomet/util/: averagers.cpp  framecounter.cpp  memusage.cpp  random.cpp  shapes.cpp
src/baphomet/util/time/: ticker.cpp
src/goat/: application.cpp  dear.cpp  engine.cpp  inputmgr.cpp  window.cpp
src/goat/util/: rnd.cpp  ticker.cpp  time.cpp
src/horns/: shader.cpp
